crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__pub_let_without_flag_error-2.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: backend.files.errors
---
{
    (
        FileId(
            0,
        ),
        FileVersion(
            1,
        ),
    ): [
        (
            "Public mutable variables require `#[allow_public_mutable]`",
            1..4,
        ),
    ],
}
