crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__pub_var_array_destruct_init.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: symbol_table.symbols
---
{
    34..=35: SymbolInfo {
        name: "a",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: true,
            },
        ),
        data_type: Int,
        is_definition: true,
        undefined: false,
        span: 34..35,
        contexts: [],
    },
    37..=38: SymbolInfo {
        name: "b",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: true,
            },
        ),
        data_type: Int,
        is_definition: true,
        undefined: false,
        span: 37..38,
        contexts: [],
    },
}
