crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__recursive_function.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "fun factorial(n: Int): Int",
    "n: Int",
    "n: Int",
    "n: Int",
    "fun factorial(n: Int): Int",
    "n: Int",
]
