crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__recursive_generic_function.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "fun identity(a: Any): Any",
    "a: Any",
    "fun identity(a: Any): Any",
    "a: Any",
    "x: Any",
    "fun identity(a: Int): Any",
    "y: Any",
    "fun identity(a: Text): Any",
]
