crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__simple_function-2.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "fun add(a: Num | Int | Text | [Num | Int | Text], b: Num | Int | Text | [Num | Int | Text]): Num | Int | Text | [Num | Int | Text]",
    "a: Num | Int | Text | [Num | Int | Text]",
    "b: Num | Int | Text | [Num | Int | Text]",
    "a: Num | Int | Text | [Num | Int | Text]",
    "b: Num | Int | Text | [Num | Int | Text]",
]
