crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__two_generics_compared-2.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "fun max_value(a: Int | Num | Text | [Num | Int | Text], b: Int | Num | Text | [Num | Int | Text]): Int | Num | Text | [Num | Int | Text]",
    "a: Int | Num | Text | [Num | Int | Text]",
    "b: Int | Num | Text | [Num | Int | Text]",
    "a: Int | Num | Text | [Num | Int | Text]",
    "b: Int | Num | Text | [Num | Int | Text]",
    "a: Int | Num | Text | [Num | Int | Text]",
    "b: Int | Num | Text | [Num | Int | Text]",
]
