crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__union_type_complex_arg-2.snap
---
source: crates/server/tests/analysis/alpha060.rs
assertion_line: 3012
expression: backend.files.errors
---
{
    (
        FileId(
            0,
        ),
        FileVersion(
            1,
        ),
    ): [],
}
